...
    "ACCOUNT_NEXT" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next"
          }
        }
      }
    },
    "ACCOUNT_SETUP_DESCRIPTION" : {
      "extractionState" : "stale",
...
    "Add Allergy Field" : {

    },
    "Add Field" : {

    },
    "Add_allergy" : {

    },
    "add_condition" : {

    },
    "ADD_REACTION" : {

    },
    "ADD_SURGERY" : {

    },
    "Additional Details" : {

    },
    "Additional Details:" : {
...
    "Age:" : {

    },
    "AI-assisted medical intake" : {

    },
    "Allergies" : {

    },
    "Allergies:" : {

    },
    "Allergy" : {

    },
    "Allergy Assistant" : {

    },
    "Allergy Name" : {

    },
    "Are you currently smoking or have you smoked in the past?" : {

    },
    "Are you currently smoking?" : {

    },
    "Auto-fill Intake Form" : {

    },
    "Back" : {

    },
    "Chat with LLM Assistant" : {

    },
    "Chief Complaint:" : {

    },
    "CHIEF_COMPLAINT_SYSTEM_PROMPT" : {
...
            "state" : "translated",
            "value" : "Packages"
          }
        }
      }
    },
    "Create New Form" : {

    },
    "Currently Smoking:" : {

    },
    "Date of Birth" : {
...
            "state" : "translated",
            "value" : "Back"
          }
        }
      }
    },
    "Full name" : {

    },
    "Get Started" : {

    },
    "Have you smoked in the past?" : {
...
    "Name" : {

    },
    "Name:" : {

    },
    "New Surgery" : {

    },
    "Next" : {

    },
    "No" : {
...
    "Review of Systems" : {

    },
    "Review summary of your medical history." : {

    },
    "Save" : {

    },
    "SCHEDULE_LIST_TITLE" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
    "Summarize your surgical history." : {

    },
    "Surgery Assistant" : {

    },
    "SURGERY_DATE" : {

    },
    "SURGERY_LOCATION" : {

    },
    "SURGERY_NAME" : {

    },
    "SURGERY_STATUS" : {

    },
    "Surgical History" : {

    },
    "TASK_CONTEXT_ACTION_QUESTIONNAIRE" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
...
