...
                        }
                        
                        DatePicker("Date of Birth:", selection: $birthdateDateFormat, in: ...Date(), displayedComponents: .date)
                            .datePickerStyle(DefaultDatePickerStyle())
                        
                        Picker("Sex", selection: $sexOption) {
                            ForEach(["Female", "Male"], id: \.self) { option in
                                Text(option).tag(option)
                            }
                        }
                        .pickerStyle(MenuPickerStyle())
                    }
                }
...
